--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "joi": "^17.6.0",
+    "mongoose": "^6.5.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "yup": "^0.32.11"
   },
